fix: overflow issue

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -5,11 +5,14 @@
 html,
 body,
 #app {
-  height: 100%;
   margin: 0;
   padding: 0;
   position: relative;
   width: 100%;
+}
+
+#app {
+  overflow: hidden;
 }
 
 body {
